--- a/main.css
+++ b/main.css
@@ -1,6 +1,18 @@
 body {
     align-items: center;
 }
+@font-face {
+    font-family: "tibia";
+    src: url(fonte-do-tibia/martel.ttf);
+}
+.content{
+   justify-content: center;
+}
+.title{
+    font-family: "tibia";
+    align-items: center;
+    justify-content: center;
+}
 label {
     margin: 510px;
     line-height: 35px;
